--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-web-browser": "~8.1.0",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -33,7 +35,7 @@
     "react-native-modal": "^11.5.6",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.0"
   },
